crates/voom-cli/tests/snapshots/issue_envelope__issue_envelope__update_unknown_id_is_not_found.snap
---
source: crates/voom-cli/tests/issue_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "issue",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "issue 42 not found"
  }
}
